--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ google-genai
 python-dotenv
 pillow
 groq
+llama-index-llms-groq 
+llama-index-embeddings-huggingface
+google-generativeai>=0.5.2,<0.6
